--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-container": "^1.0.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-buttons": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
